--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,10 @@ main>.container-lg {
     padding-top: 60px;
 }
 
+main>.container-fluid {
+    padding-top: 60px;
+}
+
 body> main {
     margin-top: 15px;
     margin-bottom: 60px;
